--- a/index.html
+++ b/index.html
@@ -1,7 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>S³ — Software Solutions Services</title>
+  <link rel="shortcut icon" href="SSS.ico">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Software Solutions Services - Hardware & Software Experts</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Smart, reliable, and affordable static web design + software solutions." />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://s3-works.github.io/s3-works/" />
+    <meta property="og:title" content="Software Solutions Services" />
+    <meta property="og:description" content="Smart, reliable, and affordable static web design + software solutions." />
+    <meta property="og:image" content="https://s3-works.github.io/s3-works/SSS.jpg" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://s3-works.github.io/s3-works/" />
+    <meta name="twitter:title" content="Software Solutions Services" />
+    <meta name="twitter:description" content="Smart, reliable, and affordable static web design + software solutions." />
+    <meta name="twitter:image" content="https://s3-works.github.io/s3-works/SSS.jpg" />
+    <script src="https://cdn.tailwindcss.com"></script>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta name="robots" content="index,follow">
